--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             const questionCounter = document.getElementById('question-counter');
             const resultContainer = document.getElementById('result-container');
 
-            const API_BASE_URL = 'http://ptyz.zabc.net';
+            const API_BASE_URL = 'https://ptyz.zabc.net';
 
             // 状态变量
             let allQuestions = [];
